# akb

./: .gitignore  README.md  batch_ingest_arena.py  netlify.toml  pyproject.toml
.github/workflows/: kb-viz-ci.yml
cli/: chunk.py  db.py  embed.py  export.py  geoagent_tools.py  ingest.py  main.py  ner.py  resolve.py  search.py
data/: corpus_locations.geojson  lake_chad_locations.geojson
kb-viz/: README.md
kb-viz/docs/: MVP_PLAN.md  sample_manifest.json
kb-viz/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
kb-viz/frontend/src/: App.tsx  main.tsx  styles.css
kb-viz/frontend/src/__tests__/: compute-digest.test.ts  data-store.test.ts  derive-label.test.ts  filter-store.test.ts  layout-store.test.ts  selection-store.test.ts  smoke.test.ts  view-store.test.ts
kb-viz/frontend/src/__tests__/projectors/: map.test.ts  semantic.test.ts  timeline.test.ts
kb-viz/frontend/src/components/: AppShell.tsx  ColorBySelector.tsx  LevelSelector.tsx  NodeTooltip.tsx  PickMenu.tsx
kb-viz/frontend/src/frames/: ChartFrame.tsx  FilterFrame.tsx  GraphFrame.tsx  LLMFrame.tsx  MapFrame.tsx  SemanticFrame.tsx  SummaryFrame.tsx  TextFrame.tsx  TimelineFrame.tsx  index.ts  registry.tsx
kb-viz/frontend/src/lib/: color-encoder.ts  compute-digest.ts  derive-label.ts  load-manifest.ts  pick-visible-labels.ts  use-box-select.tsx  use-effective-ids.ts  use-scoped-ids.ts  use-store.ts
kb-viz/frontend/src/projection/: cache.ts
kb-viz/frontend/src/projection/projectors/: map.ts  semantic.ts  timeline.ts
kb-viz/frontend/src/state/: data-store.ts  filter-store.ts  history-store.ts  layout-store.ts  selection-store.ts  view-store.ts
kb-viz/frontend/src/types/: manifest.ts
kb-viz/frontend/src/workers/: graph-layout.worker.ts  umap.worker.ts
kb-viz/kb_viz/: akb_adapter.py  schema.py
kb_viz/: test_adapter.py
mcp/: server.py
notebooks/: geoagent_demo.ipynb  nigeria_flood_analysis.ipynb
preview/claude-extend-kb-viz-ui-nuhqs/: index.html  manifest.json
preview/claude-extend-kb-viz-ui-nuhqs/assets/: index-CZNo9_uA.js  index-D8oXBaZo.js  index-DNL0cXUB.js  index-PAUT0LdE.css  maplibre-gl-D0CGw9qE.js  maplibre-gl-msJySToV.js  maplibre-gl-rnH6tC7y.js
sample_data/: boko_haram_political_economy.md  decentralised_finance_africa.md  kanem_bornu_empire.md  lake_chad_climate.md  water_harvesting_sahel.md
ui/: app.js  index.html  style.css
