[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akb"
version = "0.1.0"
description = "Archive Knowledge Base — local-first CLI for multi-dimensional document analysis"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "pymupdf4llm>=0.0.5",
    "spacy>=3.7",
    "fastembed>=0.3",
    "sqlite-vec>=0.1.6",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "dateparser>=1.2",
    "geopy>=2.4",
    "wikipedia-api>=0.6",
]

[project.scripts]
akb = "cli.main:app"

[project.optional-dependencies]
llm      = ["anthropic>=0.28", "ollama>=0.2"]
kml      = ["simplekml>=1.3"]
gpu      = ["sentence-transformers>=2.7"]
geoagent = ["geoagent>=0.1", "leafmap>=0.36"]
dev      = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["cli", "mcp"]

[tool.ruff]
line-length = 100

